# openwrt-packages

./: .gitignore  README.md
luci-app-lanspeed/net/lanspeedd/rust/: Cargo.toml
luci-app-lanspeed/net/lanspeedd/rust/.cargo/: config.toml
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-build/: Cargo.toml
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-build/src/: lib.rs  main.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-build/tests/: dependency_resolution.rs  licenses.rs  tool_invocation.rs  tool_versions.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-common/: Cargo.toml
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-common/src/: accounting.rs  lib.rs  packet.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-common/tests/: abi_layout.rs  accounting.rs  packet.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-ebpf/: Cargo.toml
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-ebpf/src/: account.rs  atomics.rs  conntrack.rs  main.rs  panic.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-openwrt-sys/: Cargo.toml  build.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-openwrt-sys/src/: blob.rs  codec.rs  error.rs  lib.rs  pure_blob.rs  pure_ubus.rs  pure_uci.rs  pure_uloop.rs  raw.rs  ubus.rs  uci.rs  uloop.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeed-openwrt-sys/tests/: abi_layout.rs  wire_integration.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeedd/: Cargo.toml  build.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeedd/src/: clock.rs  config.rs  connection_details.rs  connections.rs  daemon.rs  error.rs  interfaces.rs  lib.rs  main.rs  model.rs  policy.rs  production.rs  production_evidence.rs  rate.rs  state.rs  ubus.rs
luci-app-lanspeed/net/lanspeedd/rust/crates/lanspeedd/tests/: aya_module_kfunc_contract.rs  bpf_mode_switch_host_smoke.rs  bpf_runtime_contract.rs  btf_discovery.rs  client_connection_contract.rs  config_contract.rs  conntrack_contract.rs  conntrack_refresh_contract.rs  ebpf_object_contract.rs  history_contract.rs  identity_contract.rs  interface_contract.rs  json_contract.rs  kfunc_call_abi.rs  kfunc_fallback.rs  (+8 more)
luci-app-lanspeed/net/lanspeedd/rust/tools/: generate-openwrt-bindings.sh
(+307 files in other folders)
