[workspace]
resolver = "2"
members = [
  "crates/lanspeed-common",
  "crates/lanspeed-ebpf",
  "crates/lanspeed-openwrt-sys",
  "crates/lanspeedd",
  "crates/lanspeed-build",
]
exclude = ["vendor/aya"]

[workspace.package]
version = "1.1.2"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
aya = { path = "vendor/aya", version = "=0.14.0" }
aya-ebpf = "=0.2.1"
libc = "=0.2.186"
semver = "=1.0.28"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.17"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
