[package]
name = "lanspeed-ebpf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lanspeed-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf.workspace = true
lanspeed-common = { path = "../lanspeed-common" }
rustversion.workspace = true

[features]
default = ["conntrack-kfunc"]
conntrack-kfunc = []
